venom-tests/samples/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  annotations:
    kubernetes.io/ingress.class: tyk # <----------------- REFERENCES TYK INGRESS CONTROLLER
    tyk.io/template: myapideftemplate # <---------------- REFERENCE TO APIDEFINITION IN SAME NAMESPACE
spec:
  rules:
    - host: httpbin.tyk.io
      http:
        paths:
          - path: / # host routing: http://httpbin.tyk.io/
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 8000
          - path: /httpbin # host + path routing: http://httpbin.tyk.io/httpbin
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 8000
    - http:
        paths:
          - path: /pathonly  # path only routing: http://IPADDRESS/pathonly
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 8000
